<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="api_key">50afdb8a06eb4f5d7320f4f4729a993e</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="similar_films">Similar Films</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="charcter_name">Charcter Name</string>
    <string name="actor_name">Actor Name</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="synopsis">Synopsis</string>
    <string name="there_is_no_favourite_films_selected_yet">There is no Favourite Films Selected yet</string>

    <string name="top_rated">Top Rated</string>
    <string name="favourite">Favourite</string>
    <string name="favouriteMovies">Favourite Movies</string>
    <string name="popular">Popular</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="now_playing">Now Playing</string>
    <string name="movies">Movies</string>
    <string name="poster_of_displayed_film">Poster of displayed Film</string>
    <string name="image_of_actor">Image of Actor</string>
    <string name="back_drop_image_for_film">back drop image for film</string>
    <string name="logo_of_application">Logo of Application</string>
    <string name="thumbnail_of_video">Thumbnail Of Video</string>
    <string name="play_icon">play icon</string>
    <string name="simple_app_for_nanodegrees_program">Simple App for NanoDegrees Program</string>
    <string name="poster_image_for_film">Poster Image for Film</string>
    <string name="plain_text">Plain Text</string>
    <string name="release_date">Release Date</string>

</resources>
