<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/movies">
        <menu>
            <item
                android:id="@+id/nav_popular"
                android:title="@string/popular" />
            <item
                android:id="@+id/nav_top_rated"
                android:title="@string/top_rated" />
            <item
                android:id="@+id/nav_now_playing"
                android:title="@string/now_playing" />
            <item
                android:id="@+id/nav_latest"
                android:title="@string/latest_movies" />
        </menu>
    </item>

    <item android:title="@string/favourite">
        <menu>
            <item
                android:id="@+id/nav_film_favourite"
                android:title="@string/favouriteMovies" />
        </menu>

    </item>


</menu>
