<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="12dp"
    android:elevation="5dp"
    android:padding="4dp"
    app:cardBackgroundColor="@color/cardBackGround"
    app:cardCornerRadius="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/videoImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/thumbnail_of_video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu_camera"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/videoTittle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="33dp"
            android:layout_marginStart="16dp"
            android:text="@string/plain_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/videoImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/videoImage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/videoImage"
            app:layout_constraintWidth_default="wrap"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="14dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="14dp"
            android:contentDescription="@string/play_icon"
            app:layout_constraintBottom_toBottomOf="@+id/videoImage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/videoImage"
            app:layout_constraintRight_toRightOf="@+id/videoImage"
            app:layout_constraintTop_toTopOf="@+id/videoImage"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@android:drawable/ic_media_play"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>