<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:elevation="8dp"

    app:cardBackgroundColor="@color/cardBackGround"
    app:cardCornerRadius="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:contentDescription="@string/back_drop_image_for_film"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_movie"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/filmName"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/plain_text"
            android:textAllCaps="false"
            android:textColor="@color/movieTittle"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgBack"
            app:layout_constraintWidth_default="wrap"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="145dp"
            tools:layout_editor_absoluteX="153dp"
            tools:layout_editor_absoluteY="33dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/release_date"
            android:textColor="@color/movieTittle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/filmName"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/filmYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/plain_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintLeft_toRightOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/rating"
            android:textColor="@color/movieTittle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/filmRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/plain_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintLeft_toRightOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/genre"
            android:textColor="@color/movieTittle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/filmGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:fontFamily="sans-serif"
            android:text="@string/plain_text"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toRightOf="@+id/textView6"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_default="wrap"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/movieTittle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fab" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/synopsis"
            android:textColor="@color/movieTittle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/view"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/filmOverView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/plain_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_default="wrap"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:srcCompat="@android:drawable/btn_star"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintTop_toTopOf="@+id/imgBack"
            android:layout_marginTop="125dp" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>